products listed & backend migrate complete

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,11 +1,8 @@
-<h1 class="text-center">HELOOOOO</h1>
-
-
 <div *ngIf="dataLoaded == false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
 
-<table class="table table-striped">
+<table class="table table-hover table-striped">
     <thead>
         <tr>
             <th scope="col">productId</th>
