--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,6 +1,7 @@
 <ul class="list-group ">
+    <li routerLink="/products" class="list-group-item">Tüm Ürünler</li>
     <li (click)="setCurrentCategory(category)" *ngFor="let category of categories"
-        routerLink="/products/categories/{{category.categoryId}}" [class]="getCurrentCategory(category)">
+        routerLink="/products/category/{{category.categoryId}}" [class]="getCurrentCategory(category)">
         {{category.categoryName}}</li>
 </ul>
 
