product add & validation

--- a/src/app/components/cart-summary/cart-summary.component.html
+++ b/src/app/components/cart-summary/cart-summary.component.html
@@ -1,12 +1,14 @@
 <li *ngIf="cartItems.length>0" class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
         Sepet
     </a>
     <ul class="dropdown-menu">
         <li *ngFor="let item of cartItems"><a class="dropdown-item">
                 <span class="badge bg-secondary me-2">{{item.quantity}}</span>
                 {{item.product.productName}}
-                <span (click)="removeFromCart(item.product)" class="badge bg-danger btn ms-2">Sil</span>
+                <span (click)="removeFromCart(item.product)"
+                    class="badge bg-danger btn ms-2">Sil</span>
             </a></li>
         <li>
             <hr class="dropdown-divider">
